--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     
-
+  <main>
+    <h2>back to the grind in...</h2>
 <!-- Input for countdown timer - Hidden after submission -->
     <form>
-    <span>Back to the grind in...</span>
     <label class="sr-only" for="formBreakLengthHours">Hours</label>
     <input type="number" id="formBreakLengthHours" placeholder="hours">
     <label class="sr-only" for="formBreakLengthMinutes">Minutes</label>
@@ -45,7 +45,7 @@
     <div class ="backToWork">
     </div>
     
-
+  </inner>
 <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
 	<script src="script.js"></script>
 </body>
