--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Count Down Timer!</title>
 </head>
 <body>
-    
   <main>
     <h2>back to the grind in...</h2>
 <!-- Input for countdown timer - Hidden after submission -->
@@ -18,7 +17,7 @@
     <input type="number" id="formBreakLengthHours" placeholder="hours">
     <label class="sr-only" for="formBreakLengthMinutes">Minutes</label>
 		<input type="number" id="formBreakLengthMinutes" placeholder="minutes" required>
-		<input type="submit" id="breakTime" value="Break Time!">
+    <input type="submit" id="breakTime" value="Break Time!">
     </form>
 
     <div class="defaults">
@@ -27,7 +26,7 @@
       <button class="60"><span>1 Hour</span></button>
     </div>
     
-
+    <div class="loader"></div>
 <!-- Countdown timer -->
     <div class="countdown hideAtEnd">
     <h1 class="breakLeft">
